--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,6 @@
   <!-- Set global properties -->
   <property name="src" location="src"/>
   <property name="build" location="build"/>
-  <property name="dist" location="dist"/>
   <property name="doc" location="doc"/>
 
   <!-- Init the build -->
@@ -17,21 +16,24 @@
 
   <!-- Compile -->
   <target name="compile" depends="init" description="compile the source and make the documentation">
-    <javac srcdir="${src}" destdir="${build}"/>
+    <javac encoding="UTF-8" srcdir="${src}" destdir="${build}"/>
 	<javadoc sourcepath="${src}" destdir="${doc}"/>
   </target>
 
   <!-- Distribution -->
   <target name="dist" depends="compile" description="generate the distribution">
-    <mkdir dir="${dist}"/>
-    <jar jarfile="${dist}/Connect4.jar" basedir="${build}"/>
+    <jar destfile="Connect4.jar" basedir="${build}">
+	  <manifest>
+		<attribute name="Main-Class" value="Connect4.Connect4" />
+	  </manifest>
+	</jar>
   </target>
 
   <!-- Clean -->
   <target name="clean" description="clean up">
     <delete dir="${build}"/>
-    <delete dir="${dist}"/>
 	<delete dir="${doc}"/>
+	<delete file="Connect4.jar" />
   </target>
   
 </project>
